[pom] Add java.xml module as well for dom